force-app/main/default/objects/CAMPX__Plant__c/CAMPX__Plant__c.object-meta.xml
<CustomObject>
    <description>Capture the details</description>
    <label>Plant</label>
    <nameField>
        <label>Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>