force-app/main/default/objects/CAMPX__Plant__c/fields/CAMPX__Garden__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Garden__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garden</label>
    <referenceTo>CAMPX__Garden__c</referenceTo>
    <relationshipLabel>Plants</relationshipLabel>
    <relationshipName>Plants</relationshipName>
    <type>Lookup</type>
</CustomField>