force-app/main/default/objects/CAMPX__Plant__c/fields/CAMPX__Soil_Type__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Soil_Type__c</fullName>
    <label>Soil Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor Potting Soil</fullName>
            </value>
            <value>
                <fullName>Outdoor Potting Soil</fullName>
            </value>
            <value>
                <fullName>All Purpose Potting Soil</fullName>
            </value>
            <value>
                <fullName>Sand</fullName>
            </value>
            <value>
                <fullName>Clay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>