force-app/main/default/objects/CAMPX__Plant__c/fields/CAMPX__Sunlight__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Sunlight__c</fullName>
    <description>The amount of sunlight or shade the plant needs</description>
    <label>Sunlight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Sun</fullName>
            </value>
            <value>
                <fullName>Partial Sun</fullName>
            </value>
            <value>
                <fullName>Full Shade</fullName>
            </value>
            <value>
                <fullName>Partial Shade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>